Revert "Changed the z-index of the buger navigation"
This reverts commit 71dad6aedbef220d634335bf66f0e9b6a35f46f8.

--- a/public_html/styles/scss/stylesheet.scss
+++ b/public_html/styles/scss/stylesheet.scss
@@ -87,7 +87,6 @@ header{
             background: var(--accent-color);
             transition: ease-in-out all 850ms;
             transform: translateX(100%);
-            z-index: 10;
     
             ul{
                 gap: 14px;
